Add Unicorn Grinder lore references + link to original gist

--- a/market.html
+++ b/market.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="/assets/favicon.ico" />
     <link rel="canonical" href="https://unicornmeateth.com/market" />
     <link rel="alternate" type="text/plain" href="https://unicornmeateth.com/llms.txt" title="LLM Information" />
-    <meta name="description" content="Unicorn Market — a fully onchain orderbook for trading Unicorns (🦄) and Wrapped Unicorn Meat (w🍖). Place bids, asks, and fill orders transparently on Ethereum.">
+    <meta name="description" content="Unicorn Market — the modern onchain Unicorn Grinder. Grind 🦄 into w🍖 or ungrind them back. A fully onchain orderbook on Ethereum — no middlemen.">
     <meta name="theme-color" content="#FFBA00">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
@@ -250,10 +250,10 @@
                                     <div class="vstack items-center gap-3 sm:gap-4 text-center">
                                         <h1 class="h4 sm:h3 xl:h2 mb-0 ls-0 text-uppercase -rotate-1">🦄 Unicorn Market</h1>
                                         <p class="fs-6 sm:fs-5 xl:fs-4 mb-0">
-                                            A fully onchain orderbook for <strong>🦄 ⇄ w🍖</strong>. Place bids, asks, and fill orders — all transparent, all on Ethereum. No backend, no matching engine, no middlemen.
+                                            The modern Unicorn Grinder — fully onchain. Grind 🦄 into w🍖, or ungrind w🍖 back into whole 🦄. Place bids, asks, and fill orders — all transparent, all on Ethereum.
                                         </p>
                                         <p class="fs-7 text-muted mb-0">
-                                            Continuing the lineage from the early 2016 Unicorn grinder experiments. Trade legacy Ethereum tokens the way they deserve — openly and onchain.
+                                            Descended from <a href="https://gist.github.com/alexvandesande/eca0b87da89ab28fa50c" target="_blank" rel="noopener" style="color:inherit;text-decoration:underline;">the original 2016 Unicorn Meat Grinder</a>, but this one runs in reverse too. No backend, no matching engine, no middlemen.
                                         </p>
                                     </div>
                                 </div>
@@ -362,7 +362,7 @@
                         <div class="text-center mb-4"
                             data-anime="onview: -400; translateY: [24, 0]; opacity: [0, 1]; delay: 200;">
                             <h2 class="h5 sm:h3 xl:h2 mb-0 ls-0 text-uppercase -rotate-1">How It Works</h2>
-                            <p class="fs-6 sm:fs-5 text-muted mt-2">Four steps. Fully onchain. No middlemen.</p>
+                            <p class="fs-6 sm:fs-5 text-muted mt-2">The grinder is simple. Four steps. Grind or ungrind — no middlemen.</p>
                         </div>
                         <div class="how-it-works-grid"
                             data-anime="onview: -300; targets: >*; translateY: [24, 0]; opacity: [0, 1]; delay: anime.stagger(100, {start: 300});">
