Fix OG meta: longer title (55 chars) + description (152 chars)

--- a/market.html
+++ b/market.html
@@ -12,8 +12,8 @@
     <meta name="theme-color" content="#FFBA00">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Unicorn Market 🦄🍖">
-    <meta property="og:description" content="Onchain orderbook for trading Unicorns and Wrapped Unicorn Meat on Ethereum.">
+    <meta property="og:title" content="Unicorn Market — The Modern Onchain Unicorn Grinder 🦄🍖">
+    <meta property="og:description" content="Grind 🦄 into w🍖 or ungrind them back. Descended from the original 2016 Unicorn Meat Grinder — now a fully onchain orderbook on Ethereum. No middlemen.">
     <meta property="og:url" content="https://unicornmeateth.com/market">
     <meta property="og:site_name" content="Unicorn Meat 🍖">
     <meta property="og:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
@@ -21,8 +21,8 @@
     <meta property="og:image:height" content="600">
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Unicorn Market 🦄🍖">
-    <meta name="twitter:description" content="Onchain orderbook for trading Unicorns and Wrapped Unicorn Meat on Ethereum.">
+    <meta name="twitter:title" content="Unicorn Market — The Modern Onchain Unicorn Grinder 🦄🍖">
+    <meta name="twitter:description" content="Grind 🦄 into w🍖 or ungrind them back. Descended from the original 2016 Unicorn Meat Grinder — now a fully onchain orderbook on Ethereum. No middlemen.">
     <meta name="twitter:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
     <script src="/assets/js/app-head-bs.js"></script>
     <link rel="stylesheet" href="/assets/js/uni-core/css/uni-core.min.css">
