--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -3,7 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unicorn Meat 🍖 — Pitch Deck</title>
+  <title>Unicorn Meat 🍖 — A Historic Ethereum Foundation Token</title>
+
+  <!-- SEO -->
+  <meta name="description" content="The only coin token ever created and announced by Ethereum. Born from avsa's 2016 donation campaign, through Piper's coup, to today's community. Now collectible.">
+  <meta name="robots" content="index, follow, max-image-preview:large">
+  <link rel="canonical" href="https://unicornmeateth.com/pitch-deck">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Unicorn Meat">
+  <meta property="og:title" content="Unicorn Meat 🍖 — A Historic Ethereum Foundation Token">
+  <meta property="og:description" content="The only coin token ever created and announced by Ethereum. Born from avsa's 2016 donation campaign, through Piper's coup, to today's community. Now collectible.">
+  <meta property="og:url" content="https://unicornmeateth.com/pitch-deck">
+  <meta property="og:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Unicorn Meat — Historic Ethereum Foundation Token">
+
+  <!-- Twitter / X Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@UnicornMeatETH">
+  <meta name="twitter:creator" content="@UnicornMeatETH">
+  <meta name="twitter:title" content="Unicorn Meat 🍖 — A Historic Ethereum Foundation Token">
+  <meta name="twitter:description" content="The only coin token ever created and announced by Ethereum. Born from avsa's 2016 donation campaign, through Piper's coup, to today's community. Now collectible.">
+  <meta name="twitter:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
+  <meta name="twitter:image:alt" content="Unicorn Meat — Historic Ethereum Foundation Token">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
