feat: unique OG image for pitch deck + homepage links to /pitch-deck

--- a/index.html
+++ b/index.html
@@ -2375,9 +2375,7 @@
                                             
                                             <!-- PDF Pitch Deck Button -->
                                             <div id="pitch-deck" class="text-center mb-4 mt-4">
-                                                <a href="/assets/pdfs/unicorn-meat-deck.pdf" 
-                                                   target="_blank"
-                                                   rel="noopener noreferrer"
+                                                <a href="/pitch-deck"
                                                    class="btn btn-md border border-2 border-black contrast-shadow-sm hover:-rotate-2 fw-bold"
                                                    style="background: linear-gradient(135deg, #ffb3d1, #ffc0cb); color: #000;">
                                                     <span class="fs-6 sm:fs-5 xl:fs-4">🦄 Unicorn Meat Pitch Deck 🍖</span>
