--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Unicorn Meat 🍖 — A Historic Ethereum Foundation Token">
   <meta property="og:description" content="The only coin token ever created and announced by Ethereum. Born from avsa's 2016 donation campaign, through Piper's coup, to today's community. Now collectible.">
   <meta property="og:url" content="https://unicornmeateth.com/pitch-deck">
-  <meta property="og:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
+  <meta property="og:image" content="https://unicornmeateth.com/assets/images/pitch-deck-og.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Unicorn Meat — Historic Ethereum Foundation Token">
@@ -27,7 +27,7 @@
   <meta name="twitter:creator" content="@UnicornMeatETH">
   <meta name="twitter:title" content="Unicorn Meat 🍖 — A Historic Ethereum Foundation Token">
   <meta name="twitter:description" content="The only coin token ever created and announced by Ethereum. Born from avsa's 2016 donation campaign, through Piper's coup, to today's community. Now collectible.">
-  <meta name="twitter:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
+  <meta name="twitter:image" content="https://unicornmeateth.com/assets/images/pitch-deck-og.png">
   <meta name="twitter:image:alt" content="Unicorn Meat — Historic Ethereum Foundation Token">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
